<resources>
    <string name="app_name">Headhunter client</string>

    <string name="no_internet_connection">Отсутствует подключение к интернету</string>
    <string name="internet_connection_restored">Подключение восстановлено</string>

    <string name="main">Главная</string>
    <string name="favourites">Избранное</string>
    <string name="team">Команда</string>

    <!--  Экран Команда  /-->
    <string name="team_team">Команда</string>
    <string name="team_programmers">Над приложением работали</string>
    <string name="team_first">Илья</string>
    <string name="team_second">Андрей</string>
    <string name="team_third">Марат</string>
    <string name="title_search">Поиск вакансий</string>
    <string name="search_hint">Введите запрос</string>

    <string name="empty_salary">Зарплата не указана</string>
    <string name="salary_from">от %1$d %2$s</string>
    <string name="salary_to">до %1$d %2$s</string>
    <string name="salary_from_to">от %1$d %2$s до %3$d %4$s</string>

    <!--  Экран Описание вакансии  /-->
    <string name="vacancy_header">Вакансия</string>
    <string name="vacancy_experience">Требуемый опыт</string>
    <string name="vacancy_desc">Описание вакансии</string>
    <string name="vacancy_duties">Обязанности</string>
    <string name="vacancy_req">Требования</string>
    <string name="vacancy_conditions">Условия</string>
    <string name="vacancy_skills">Ключевые навыки</string>
    <string name="vacancy_contacts">Контакты</string>
    <string name="vacancy_phones">Телефоны</string>
    <string name="vacancy_email">Email</string>



    <string name="search_no_internet">Нет интернета</string>
    <string name="search_no_internet_check">Проверьте подключение к интернету</string>
    <string name="search_error">Ошибка при получении данных</string>
    <string name="search_list_fetch_fail">Не удалось получить список вакансий</string>
    <string name="search_no_such_vacancy">Вакансия не найдена или удалена</string>
    <string name="search_total_found">Найдено %d вакансий</string>

    <!--  Экран Настройка фильтрации  /-->
    <string name="filter_hint">Введите сумму</string>
    <string name="filter_salary">Ожидаемая зарплата</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="filter_not_show">Не показывать без зарплаты</string>
    <string name="filter_apply">Применить</string>
    <string name="filter_reset">Сбросить</string>

    <!--  Экран Выбор отрасли  /-->
    <string name="industries_title">Выбор отрасли</string>
    <string name="search_industry_hint">Введите отрасль</string>
    <string name="industries_apply">Выбрать</string>
    <string name="industries_list_fetch_fail">Не удалось получить список</string>
    <string name="industries_list_not_found">Такой отрасли нет</string>

</resources>
