<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.team.TeamFragment">

    <TextView
        style="@style/Font22Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_team"
        android:textColor="@color/black_day_white_night" />

    <TextView
        style="@style/Font32Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/team_programmers"
        android:textColor="@color/black_day_white_night" />

    <TextView
        style="@style/TeamTextStyle"
        android:layout_marginTop="24dp"
        android:text="@string/team_first" />

    <TextView
        style="@style/TeamTextStyle"
        android:layout_marginTop="8dp"
        android:text="@string/team_second" />

    <TextView
        style="@style/TeamTextStyle"
        android:layout_marginTop="8dp"
        android:text="@string/team_third" />

</LinearLayout>
