<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_day_black_night">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_16" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:buttonGravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/filter_settings"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:titleTextAppearance="@style/Font22Medium"
        app:titleTextColor="@color/black_day_white_night" />

    <include
        android:id="@+id/clIndustryValue"
        layout="@layout/filter_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <ImageView
        android:id="@+id/ivEditSalaryBackground"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@drawable/filter_sum_background"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/clIndustryValue" />

    <EditText
        android:id="@+id/etSalaryEditText"
        android:textAppearance="@style/Font16Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginStart="@dimen/margin_16"
        android:hint="@string/filter_hint"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:background="@drawable/filter_sum_background"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@drawable/editview_cursor"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toTopOf="@+id/ivEditSalaryBackground" />

    <TextView
        android:id="@+id/tvSalaryHint"
        android:textAppearance="@style/Font12Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/filter_salary"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/etSalaryEditText"
        app:layout_constraintStart_toStartOf="@+id/left_border" />

    <ImageView
        android:id="@+id/ivClearSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:src="@drawable/ic_clear"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/ivEditSalaryBackground"
        app:layout_constraintS_toStartOf="@+id/etSalaryEditText"
        app:layout_constraintTop_toTopOf="@id/ivEditSalaryBackground" />

    <TextView
        android:id="@+id/tvWithoutSalary"
        android:textAppearance="@style/Font16Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/filter_not_show"
        android:textColor="@color/black_day_white_night"
        app:layout_constraintStart_toStartOf="@+id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/etSalaryEditText" />

    <CheckBox
        android:id="@+id/ckbSalaryCheckbox"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:backgroundTint="@color/blue"
        android:buttonTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/tvWithoutSalary"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintTop_toTopOf="@+id/tvWithoutSalary"/>

    <TextView
        android:id="@+id/btnApplyFilter"
        android:textAppearance="@style/Font16Medium"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/margin_8"
        android:gravity="center"
        android:visibility="visible"
        android:text="@string/filter_apply"
        android:textColor="@color/white"
        android:background="@drawable/blue_rounded_bg"
        app:layout_constraintBottom_toTopOf="@+id/btnResetFilter"
        app:layout_constraintEnd_toStartOf="@+id/right_border"
        app:layout_constraintStart_toStartOf="@+id/left_border" />

    <TextView
        android:id="@+id/btnResetFilter"
        android:textAppearance="@style/Font16Medium"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/margin_24"
        android:gravity="center"
        android:visibility="visible"
        android:text="@string/filter_reset"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_border"
        app:layout_constraintStart_toStartOf="@+id/left_border" />

</androidx.constraintlayout.widget.ConstraintLayout>
