<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_day_black_night">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_day_black_night"
            android:paddingHorizontal="16dp">

            <TextView
                style="@style/Font22Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/title_search"
                android:textColor="@color/black_day_white_night" />

            <ImageView
                android:id="@+id/filter_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/filter_settings"
                android:src="@drawable/ic_filters_off" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_editview"
        android:backgroundTint="@color/search_edit_background"
        android:paddingVertical="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbarlayout">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center|end"
            android:layout_marginHorizontal="12dp"
            android:padding="3dp"
            android:src="@drawable/ic_search"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/search_edit_text"
            style="@style/SearchEditText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@null"

            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="0dp"

            android:textCursorDrawable="@drawable/editview_cursor" />

        <ImageView
            android:id="@+id/search_icon_clear"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center|end"
            android:layout_marginHorizontal="12dp"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
