<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_vacancy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_day_black_night">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white_day_black_night"
            android:paddingHorizontal="@dimen/padding_16">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/titleBar"
                style="@style/Font22Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/vacancy_header" />

            <ImageView
                android:id="@+id/favButton"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_16"
                android:src="@drawable/ic_favorite" />

            <ImageView
                android:id="@+id/shareButton"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_24"
                android:src="@drawable/ic_share" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include_error_block"
        layout="@layout/include_error_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white_day_black_night"
        android:paddingHorizontal="@dimen/padding_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/jobTitle"
                style="@style/Font32Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/image_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Android-разработчик" />

            <TextView
                android:id="@+id/salary"
                style="@style/Font22Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jobTitle"
                tools:text="от 100 000 ₽" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/companyCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/vacancy_card_shape"
                android:padding="@dimen/padding_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/salary">

                <ImageView
                    android:id="@+id/companyLogo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_vacancy_placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/companyName"
                    style="@style/Font22Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@id/companyLogo"
                    app:layout_constraintTop_toTopOf="@id/companyLogo"
                    tools:text="Еда" />

                <TextView
                    android:id="@+id/companyLocation"
                    style="@style/Font16Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/companyName"
                    app:layout_constraintTop_toBottomOf="@id/companyName"
                    tools:text="Москва" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/experienceTitle"
                style="@style/Font16Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/vacancy_experience"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/companyCard" />

            <TextView
                android:id="@+id/experienceText"
                style="@style/Font16Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/experienceTitle"
                tools:text="От 1 года до 3 лет" />

            <TextView
                android:id="@+id/employmentText"
                style="@style/Font16Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/experienceText"
                tools:text="Полная занятость, Удаленная работа" />

            <TextView
                android:id="@+id/descriptionTitle"
                style="@style/Font22Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                android:text="@string/vacancy_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/employmentText" />

            <TextView
                android:id="@+id/descriptionText"
                style="@style/Font16Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionTitle"
                tools:text=" • сильная команда, с которой можно расти\n • возможность влиять на процесс и результат\n • расширенная программа ДМС: стоматология, обследования, вызов врача на дом и многое другое" />

            <TextView
                android:id="@+id/skillsTitle"
                style="@style/Font22Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/vacancy_skills"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionText" />

            <TextView
                android:id="@+id/skillsText"
                style="@style/Font16Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/skillsTitle"
                tools:text=" • Знание классических алгоритмов и структуры данных\n • Программирование для Android больше одного года\n • Знание WebRTC" />

            <TextView
                android:id="@+id/contactsTitle"
                style="@style/Font22Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/vacancy_contacts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/skillsText" />

            <TextView
                android:id="@+id/phonesTitle"
                style="@style/Font22Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/vacancy_phones"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contactsTitle" />

            <TextView
                android:id="@+id/phonesText"
                style="@style/Font16Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phonesTitle"
                tools:text="+79001234567 с 10 до 18" />

            <TextView
                android:id="@+id/emailTitle"
                style="@style/Font22Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/vacancy_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phonesText" />

            <TextView
                android:id="@+id/emailText"
                style="@style/Font16Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTitle"
                tools:text="pr@company.name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
